// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base field props should render error styles 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -11,11 +11,11 @@
      "-webkit-justify-content": "space-between",
      "-webkit-transition": "border-color 100ms ease",
      "align-items": "center",
      "background": "#fff",
      "border": "1px solid",
-     "border-color": "#d94f4f",
+     "border-color": "#949494",
      "border-radius": "2px",
      "box-shadow": "transparent",
      "display": "flex",
      "flex": "1",
      "flex-direction": "row",
`;

exports[`base field props should render inline styles 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -14,19 +14,18 @@
      "background": "#fff",
      "border": "1px solid",
      "border-color": "#949494",
      "border-radius": "2px",
      "box-shadow": "transparent",
-     "display": "inline-flex",
+     "display": "flex",
      "flex": "1",
      "flex-direction": "row",
      "font-size": "13px",
      "gap": "calc(4px * 2)",
      "justify-content": "space-between",
      "outline": "none",
      "padding": "0 8px",
      "position": "relative",
      "transition": "border-color 100ms ease",
-     "vertical-align": "baseline",
-     "width": "auto",
+     "width": "100%",
    },
  ]
`;

exports[`base field props should render subtle styles 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -10,11 +10,10 @@
      "-webkit-flex-direction": "row",
      "-webkit-justify-content": "space-between",
      "-webkit-transition": "border-color 100ms ease",
      "align-items": "center",
      "background": "#fff",
-     "background-color": "transparent",
      "border": "1px solid",
      "border-color": "#949494",
      "border-radius": "2px",
      "box-shadow": "transparent",
      "display": "flex",
`;

exports[`base field should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  background: #fff;
  border-radius: 2px;
  border: 1px solid;
  border-color: #949494;
  box-shadow: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 13px;
  outline: none;
  padding: 0 8px;
  position: relative;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  width: 100%;
}

.emotion-0>* {
  min-width: 0;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-0 {
    transition-duration: 0ms;
  }
}

.emotion-0[disabled] {
  opacity: 0.6;
}

.emotion-0:hover {
  border-color: #757575;
}

.emotion-0:focus,
.emotion-0[data-focused='true'] {
  border-color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #007cba));
  box-shadow: 0 0 0 0.5px var(--wp-components-color-accent, var(--wp-admin-theme-color, #007cba));
}

<div>
  <div
    class="components-flex components-base-field emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="BaseField"
  />
</div>
`;
